--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!doctype html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
-    <title>Hello React</title>
-</head>
-<body>
-  <div id="react-root"></div>
-  <script src="/build/bundle.js"></script>
-</body>
+    <title>Chatty</title>
+    <style type="text/css">
+    </style>
+  </head>
+  <body>
+    <div id="react-root"></div>
+    <script src="/build/bundle.js"></script>
+  </body>
 </html>
